Fixing mobile nav menu z-index issue

--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -1,3 +1,8 @@
+.page-header {
+  position: relative;
+  z-index: 9999;
+}
+
 .navbar {
   background-color: $grafitti;
   height: 65px;
